--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,13 @@
     "start": "node dist/index.js",
     "lint": "eslint . --ext .ts",
     "type-check": "tsc --noEmit",
-    "test": "vitest run"
+    "test": "vitest run",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:seed": "prisma db seed"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "express": "^4.19.2"
   },
   "devDependencies": {
@@ -23,6 +27,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
+    "prisma": "^5.22.0",
     "supertest": "^6.3.4",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
