--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
