--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,12 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@tanstack/react-query": "^5.59.16",
+    "classnames": "^2.5.1",
     "next": "^14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
