Add Google sync scaffolding and queues

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "bullmq": "^5.12.12",
     "express": "^4.19.2"
   },
   "devDependencies": {
